# almoxarifado

./: .dockerignore  .env.template  .gitignore  Dockerfile  GEMINI.md  README.md  docker-compose.dev.yml  docker-compose.yaml  entrypoint.sh  genkey.py  main.py  pyproject.toml
core/: settings.py  urls.py
docs/: README.md  design-system.md
docs/assets/: PRINT DO SISTEMA.docx  PROPOSTA_ATUALIZADA-merenda-2026.xlsx
estoque/: admin.py  apps.py  context_processors.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
estoque/migrations/: 0001_initial.py  0002_itempedido_preco_unitario_and_more.py  0003_entrada_compra_direta_entrada_licitacao_entrada_lote_and_more.py  0004_perfilusuario.py  0005_backfill_perfilusuario.py  0006_produto_fornecedores.py  0007_unidade_setor_relacionamentos.py  0008_setor_cargo_representante_setor_representante_and_more.py
nginx/: default.conf
static/css/: design-tokens.css
static/js/: ui.js
templates/: base.html  index.html
templates/components/: action_sidebar_standard.html
templates/estoque/: dashboard.html  entrada_form.html  entrada_list.html  fornecedor_form.html  fornecedor_list.html  importar_licitacao.html  pedido_detail.html  pedido_form.html  pedido_list.html  produto_form.html  produto_list.html  relatorio_estoque.html  relatorio_pedidos.html  relatorios.html  setor_form.html  setor_list.html  unidade_form.html  unidade_list.html
templates/registration/: login.html  profile.html
